syntax = "proto3";

package twitterdash;

import "objects.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service DatabaseReader {
    rpc GetCurrentTrends(GetCurrentTrendsRequest) returns (TrendProviderReply) {}
    rpc GetRecentTrends(GetRecentTrendsRequest) returns (GetRecentTrendsReply) {}
    rpc GetAvailableCountries(google.protobuf.Empty) returns (GetAvailableCountriesReply) {}
}

service DatabaseWriter{
    rpc StoreTrends(TrendProviderReply) returns (google.protobuf.Empty) {}
}

message GetCurrentTrendsRequest{
    optional string country = 1; // country name
    int32 limit = 2;
}

message GetAvailableCountriesReply{
    repeated string countries = 1;// list of country names  
}

message GetRecentTrendsRequest {
    string hashtag = 1;
    optional google.protobuf.Timestamp start_date = 2;
    optional google.protobuf.Timestamp end_date = 3;
}

message RecentTrend{
    google.protobuf.Timestamp datetime = 1;
    Trend trend = 2;
}

message GetRecentTrendsReply{
     repeated RecentTrend recendTrends = 1;
}